--- a/src/index.html
+++ b/src/index.html
@@ -4,61 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>Stencil Component Starter</title>
-  <style>
-    body {
-      font-family: sans-serif;
-    }
-
-    .side-nav ul {
-      list-style: none;
-    }
-
-    .side-nav li {
-      margin: 1rem 0;
-    }
-
-    .side-nav a {
-      text-decoration: none;
-      color: black;
-    }
-  </style>
   <script src="/build/mycomponent.js"></script>
 </head>
 <body>
-  <button id="side-drawer-button">Open Side Menu</button>
-  <p>Let's test this new <uc-tooltip text="We build this before, now it's better now!">Tooltip!</uc-tooltip></p>
-  <uc-side-drawer title="Main Menu">
-    <nav class="side-nav">
-      <ul>
-        <li>
-          <a href="/">A Link</a>
-        </li>
-        <li>
-          <a href="/">Another Link</a>
-        </li>
-        <li>
-          <a href="/">A Third Link</a>
-        </li>
-      </ul>
-    </nav>
-  </uc-side-drawer>
-
-  <script>
-    const sideDrawerButton = document.querySelector('#side-drawer-button');
-    const sideDrawer = document.querySelector('uc-side-drawer');
-    setTimeout(() => {
-      // sideDrawer.title = 'It Changed!';
-      // sideDrawer.setAttribute('title', 'It Changed vie Attribute');
-    }, 2000);
-
-    sideDrawerButton.addEventListener('click', () => {
-      if (!sideDrawer.opened) {
-        // sideDrawer.open=true;
-        sideDrawer.open();
-      }
-    });
-
-
-  </script>
+  <uc-stock-price></uc-stock-price>
 </body>
 </html>
