initial stock symbol

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   <script src="/build/mycomponent.js"></script>
 </head>
 <body>
-  <uc-stock-price></uc-stock-price>
+  <uc-stock-price stock-symbol="AAPL"></uc-stock-price>
 </body>
 </html>
